--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 31
+    buildToolsVersion "31.0.0"
 
     defaultConfig {
-        applicationId "com.flo354.xposed.applocale"
-        minSdkVersion 15
-        targetSdkVersion 23 // don't modify. Context.MODE_WORLD_READABLE removed in SDK 24+
-        versionCode 13
-        versionName "2.0.7"
+        applicationId "soko.ekibun.xposed.applocale"
+        minSdkVersion 21
+        //noinspection ExpiredTargetSdkVersion
+        targetSdkVersion 23
+        versionCode 14
+        versionName "3.0.0"
     }
     buildTypes {
         release {
@@ -20,11 +22,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     compileOnly 'de.robv.android.xposed:api:82'
-    compileOnly 'de.robv.android.xposed:api:82:sources'
 }
